--- a/app/views/admin/plans/new.html.erb
+++ b/app/views/admin/plans/new.html.erb
@@ -1,1 +1,11 @@
-<!-- TODO -->
+<%= admin_page_header t('.create'), t('.add_plan') %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <%= admin_box do %>
+        <%= admin_box_header title t('.create') %>
+        <%= render 'form' %>
+      <% end %>
+    </div>
+  </div>
+</div>
