--- a/app/components/plan_component.html.erb
+++ b/app/components/plan_component.html.erb
@@ -2,6 +2,6 @@
   <h1 class="mb-6 text-3xl font-semibold"><%= name %></h1>
   <%= sanitize @plan.content %>
   <div>
-    <%= link_to button, '#', class: 'inline-block px-8 py-3 rounded-full bg-white text-red-500', target: '_blank' %>
+    <%= link_to button_label, button_target, class: 'inline-block px-8 py-3 rounded-full bg-white text-red-500', target: '_blank' %>
   </div>
 </article>
