Update plan content display

--- a/app/components/plan_component.html.erb
+++ b/app/components/plan_component.html.erb
@@ -1,7 +1,9 @@
-<article class="flex flex-col mx-4 p-8 border-2 border-white text-center">
-  <h1 class="mb-6 text-3xl font-semibold"><%= name %></h1>
-  <%= sanitize @plan.content %>
-  <div>
+<article class="flex flex-col mx-4 p-8 border-2 border-white">
+  <h1 class="mb-6 text-center text-3xl font-semibold"><%= name %></h1>
+  <div class="flex-grow mb-6">
+    <%= sanitize @plan.content %>
+  </div>
+  <div class="text-center">
     <%= link_to button_label, button_target, class: 'inline-block px-8 py-3 rounded-full bg-white text-red-500', target: '_blank' %>
   </div>
 </article>
