Fix data-turbo-method not apply to link_to

--- a/app/views/admin/agenda_times/_agenda_time.html.slim
+++ b/app/views/admin/agenda_times/_agenda_time.html.slim
@@ -7,4 +7,4 @@ tr
     .btn-group
       = link_to t('.edit'), edit_admin_agenda_time_path(agenda_time), class: 'btn btn-primary'
       / TODO: Create helper
-      = link_to t('.destroy'), admin_agenda_time_path(agenda_time), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
+      = button_to t('.destroy'), admin_agenda_time_path(agenda_time), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
