--- a/app/views/admin/agenda_days/_agenda_day.html.slim
+++ b/app/views/admin/agenda_days/_agenda_day.html.slim
@@ -6,4 +6,4 @@ tr
     .btn-group
       = link_to t('.edit'), edit_admin_agenda_day_path(agenda_day), class: 'btn btn-primary'
       / TODO: Create helper
-      = link_to t('.destroy'), admin_agenda_day_path(agenda_day), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
+      = button_to t('.destroy'), admin_agenda_day_path(agenda_day), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
