--- a/app/views/admin/agendas/_agenda.html.slim
+++ b/app/views/admin/agendas/_agenda.html.slim
@@ -5,4 +5,4 @@ tr
     .btn-group
       = link_to t('.edit'), edit_admin_agenda_path(agenda), class: 'btn btn-primary'
       / TODO: Create helper
-      = link_to t('.destroy'), admin_agenda_path(agenda), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
+      = button_to t('.destroy'), admin_agenda_path(agenda), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
