--- a/app/views/admin/blocks/_block.html.erb
+++ b/app/views/admin/blocks/_block.html.erb
@@ -6,6 +6,6 @@
   <td>
     <div class="btn-group">
       <%= link_to t('.edit'), edit_admin_block_path(block), class: 'btn btn-primary' %>
-      <%= link_to t('.destroy'), admin_block_path(block), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') } %>
+      <%= button_to t('.destroy'), admin_block_path(block), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') } %>
     </div>
 </tr>
