--- a/app/views/admin/indie_space/games/_game.html.slim
+++ b/app/views/admin/indie_space/games/_game.html.slim
@@ -5,4 +5,4 @@ tr
   td = game.order
   td
     .btn-group
-      = link_to t('.destroy'), admin_indie_space_game_path(game), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
+      = button_to t('.destroy'), admin_indie_space_game_path(game), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
