--- a/app/views/admin/news/_news.html.slim
+++ b/app/views/admin/news/_news.html.slim
@@ -7,4 +7,4 @@ tr
     .btn-group
       / TODO: Create helper
       = link_to t('.preview'), preview_admin_news_path(news), class: 'btn btn-primary', target: '_blank'
-      = link_to t('.destroy'), admin_news_path(news), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
+      = button_to t('.destroy'), admin_news_path(news), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
