--- a/app/views/admin/night_market/games/_game.html.erb
+++ b/app/views/admin/night_market/games/_game.html.erb
@@ -5,6 +5,6 @@
   <td><%= game.order %></td>
   <td>
     <div class="btn-group">
-      <%= link_to t('.destroy'), admin_night_market_game_path(game), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') } %>
+      <%= button_to t('.destroy'), admin_night_market_game_path(game), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') } %>
     </div>
 </tr>
