--- a/app/views/admin/partner_types/_partner_type.html.slim
+++ b/app/views/admin/partner_types/_partner_type.html.slim
@@ -6,4 +6,4 @@ tr
     .btn-group
       = link_to t('.edit'), edit_admin_partner_type_path(partner_type), class: 'btn btn-primary'
       / TODO: Create helper
-      = link_to t('.destroy'), admin_partner_type_path(partner_type), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
+      = button_to t('.destroy'), admin_partner_type_path(partner_type), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
