--- a/app/views/admin/plans/_plan.html.erb
+++ b/app/views/admin/plans/_plan.html.erb
@@ -4,6 +4,6 @@
   <td>
     <div class="btn-group">
       <%= link_to t('.edit'), edit_admin_plan_path(plan), class: 'btn btn-primary' %>
-      <%= link_to t('.destroy'), admin_plan_path(plan), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') } %>
+      <%= button_to t('.destroy'), admin_plan_path(plan), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') } %>
     </div>
 </tr>
