--- a/app/views/admin/speakers/_speaker.html.slim
+++ b/app/views/admin/speakers/_speaker.html.slim
@@ -6,4 +6,4 @@ tr
     .btn-group
       = link_to t('.edit'), edit_admin_speaker_path(speaker), class: 'btn btn-primary'
       / TODO: Create helper
-      = link_to t('.destroy'), admin_speaker_path(speaker), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
+      = button_to t('.destroy'), admin_speaker_path(speaker), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
