--- a/app/views/admin/sponsors/_sponsor.html.slim
+++ b/app/views/admin/sponsors/_sponsor.html.slim
@@ -7,4 +7,4 @@ tr
     .btn-group
       = link_to t('.edit'), edit_admin_sponsor_path(sponsor), class: 'btn btn-primary'
       / TODO: Create helper
-      = link_to t('.destroy'), admin_sponsor_path(sponsor), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
+      = button_to t('.destroy'), admin_sponsor_path(sponsor), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
