--- a/app/views/admin/sliders/_slider.html.slim
+++ b/app/views/admin/sliders/_slider.html.slim
@@ -4,7 +4,7 @@ tr
   td = t("locale.name.#{slider.language}")
   td = t("shared.nav.#{slider.page}")
   td
-    .btn-group
+    .d-flex.align-items-start
       = link_to t('.edit'), edit_admin_slider_path(slider), class: 'btn btn-primary'
       / TODO: Create helper
       = button_to t('.destroy'), admin_slider_path(slider), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
