--- a/app/views/admin/agenda_times/_agenda_time.html.slim
+++ b/app/views/admin/agenda_times/_agenda_time.html.slim
@@ -4,7 +4,7 @@ tr
   td = agenda_time.day.name
   td = agenda_time.order
   td
-    .btn-group
+    .d-flex.align-items-start
       = link_to t('.edit'), edit_admin_agenda_time_path(agenda_time), class: 'btn btn-primary'
       / TODO: Create helper
       = button_to t('.destroy'), admin_agenda_time_path(agenda_time), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
