--- a/app/views/admin/agendas/_agenda.html.slim
+++ b/app/views/admin/agendas/_agenda.html.slim
@@ -2,7 +2,7 @@ tr
   td = agenda.id
   td = agenda.subject
   td
-    .btn-group
+    .d-flex.align-items-start
       = link_to t('.edit'), edit_admin_agenda_path(agenda), class: 'btn btn-primary'
       / TODO: Create helper
       = button_to t('.destroy'), admin_agenda_path(agenda), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
