--- a/app/views/admin/night_market/games/_game.html.erb
+++ b/app/views/admin/night_market/games/_game.html.erb
@@ -4,7 +4,7 @@
   <td><%= game.team %></td>
   <td><%= game.order %></td>
   <td>
-    <div class="btn-group">
+    <div class="d-flex align-items-start">
       <%= button_to t('.destroy'), admin_night_market_game_path(game), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') } %>
     </div>
 </tr>
