--- a/app/views/admin/partners/_partner.html.slim
+++ b/app/views/admin/partners/_partner.html.slim
@@ -4,7 +4,7 @@ tr
   td = partner.type.name
   td = partner.order
   td
-    .btn-group
+    .d-flex.align-items-start
       = link_to t('.edit'), edit_admin_partner_path(partner), class: 'btn btn-primary'
       / TODO: Create helper
       = button_to t('.destroy'), admin_partner_path(partner), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
