--- a/app/views/admin/plans/_plan.html.erb
+++ b/app/views/admin/plans/_plan.html.erb
@@ -2,7 +2,7 @@
   <td><%= plan.id %></td>
   <td><%= plan.name %></td>
   <td>
-    <div class="btn-group">
+    <div class="d-flex align-items-start">
       <%= link_to t('.edit'), edit_admin_plan_path(plan), class: 'btn btn-primary' %>
       <%= button_to t('.destroy'), admin_plan_path(plan), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') } %>
     </div>
