--- a/app/views/admin/speakers/_speaker.html.slim
+++ b/app/views/admin/speakers/_speaker.html.slim
@@ -3,7 +3,7 @@ tr
   td = speaker.name
   td = speaker.order
   td
-    .btn-group
+    .d-flex.align-items-start
       = link_to t('.edit'), edit_admin_speaker_path(speaker), class: 'btn btn-primary'
       / TODO: Create helper
       = button_to t('.destroy'), admin_speaker_path(speaker), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
