--- a/app/views/admin/sponsor_levels/_sponsor_level.html.slim
+++ b/app/views/admin/sponsor_levels/_sponsor_level.html.slim
@@ -3,7 +3,7 @@ tr
   td = sponsor_level.name
   td = sponsor_level.order
   td
-    .btn-group
+    .d-flex.align-items-start
       = link_to t('.edit'), edit_admin_sponsor_level_path(sponsor_level), class: 'btn btn-primary'
       / TODO: Create helper
       = button_to t('.destroy'), admin_sponsor_level_path(sponsor_level), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
