--- a/app/views/admin/sponsors/_sponsor.html.slim
+++ b/app/views/admin/sponsors/_sponsor.html.slim
@@ -4,7 +4,7 @@ tr
   td = sponsor.level.name
   td = sponsor.order
   td
-    .btn-group
+    .d-flex.align-items-start
       = link_to t('.edit'), edit_admin_sponsor_path(sponsor), class: 'btn btn-primary'
       / TODO: Create helper
       = button_to t('.destroy'), admin_sponsor_path(sponsor), class: 'btn btn-danger', method: :delete, data: { confirm: t('shared.destroy_confirm') }
