--- a/app/views/admin/blocks/_form.html.erb
+++ b/app/views/admin/blocks/_form.html.erb
@@ -2,7 +2,7 @@
   <%= admin_box_body do %>
     <%= f.input :content, as: :text, input_html: { data: { editor: true }, rows: 20 } %>
     <%= f.input :language, collection: Block.languages.map { |lang, _| [t("locale.name.#{lang}"), lang] }.to_h, default: 'zh-TW' %>
-    <%= f.input :page, collection: Block.pages.map { |page, _| [t("shared.nav.#{page}"), page] }.to_h, default: 'night_market' %>
+    <%= f.input :page, collection: Block.pages.map { |page, _| [t("block_types.#{page}"), page] }.to_h, default: 'night_market' %>
     <%= f.input :component_type, collection: Block.component_types.map { |type, _| [type, type] }.to_h, default: 'text' %>
     <%= f.input :order %>
   <% end %>
