--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
   </head>
   <body>
     <header class="sticky top-0 bg-white z-50">
-      <%= render NavigationComponent.new(current_site: current_site, current_locale: current_locale) %>
+      <%= render NavigationComponent.new(current_site: current_site, current_locale: current_locale) do |c| %>
+        <% c.with_primary_items(primary_menu_items) %>
+      <% end %>
     </header>
     <main>
       <%= render BreadcrumbComponent.new(breadcrumbs: breadcrumbs) %>
