--- a/app/views/admin/menu_items/index.html.erb
+++ b/app/views/admin/menu_items/index.html.erb
@@ -17,7 +17,7 @@
                 </tr>
               </thead>
               <tbody>
-                <%= render @menus %>
+                <%= render @menu_items %>
               </tbody>
             </table>
           <% end %>
