Add edit menu item feature in admin panel

--- a/app/views/admin/menu_items/edit.html.erb
+++ b/app/views/admin/menu_items/edit.html.erb
@@ -1,9 +1,9 @@
-<%= admin_page_header t('.edit'), t('.edit_plan') %>
+<%= admin_page_header t('.edit'), t('.edit_menu_item') %>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
       <%= admin_box do %>
-        <%= admin_box_header title t('.edit_plan') %>
+        <%= admin_box_header title t('.edit_menu_item') %>
         <%= admin_box_body do %>
           <%= admin_locale_navtab %>
           <%= render 'form' %>
