--- a/app/views/admin/menu_items/_form.html.erb
+++ b/app/views/admin/menu_items/_form.html.erb
@@ -4,7 +4,7 @@
       <%= f.input :name, as: :string %>
       <%= f.input :link, as: :string %>
       <%= f.input :visible, as: :boolean%>
-      <%= f.input :menu_id, as: :hidden, value: :secondary %>
+      <%= f.input :menu_id, as: :hidden, input_html: { value: :secondary } %>
       <%= admin_box_footer do %>
         <%= f.submit class: 'btn btn-primary' %>
       <% end %>
