Adjust plan display

--- a/app/components/plan_component.html.erb
+++ b/app/components/plan_component.html.erb
@@ -1,4 +1,4 @@
-<article class="flex flex-col mx-4 p-8 border-2 border-white">
+<article class="flex flex-col p-8 border-2 border-white">
   <h1 class="mb-6 text-center text-3xl font-semibold"><%= name %></h1>
   <div class="flex-grow mb-6">
     <%= sanitize @plan.content %>
