--- a/app/components/plan_list_component.html.erb
+++ b/app/components/plan_list_component.html.erb
@@ -3,7 +3,7 @@
     <%= render HeadingComponent.new(text: t(".#{section_name}")) %>
   </div>
   <div class="py-16 bg-red-500 text-white">
-    <div class="container mx-auto lg:grid lg:grid-cols-3 space-y-4 lg:space-y-0 justify-items-stretch">
+    <div class="container mx-auto px-4 grid lg:grid-cols-3 gap-8 justify-items-stretch">
       <% if content? %>
         <%= content %>
       <% else %>
