--- a/app/views/admin/plans/_form.html.erb
+++ b/app/views/admin/plans/_form.html.erb
@@ -5,6 +5,7 @@
       <%= f.input :content, as: :text, input_html: { data: { editor: true }, rows: 20 } %>
       <%= f.input :button_label, as: :string %>
       <%= f.input :button_target, as: :string %>
+      <%= f.input :order, as: :integer %>
       <%= admin_box_footer do %>
         <%= f.submit class: 'btn btn-primary' %>
       <% end %>
