--- a/app/views/pages/coc.zh-TW.html.erb
+++ b/app/views/pages/coc.zh-TW.html.erb
@@ -18,6 +18,14 @@
     <p class="my-4">我們很重視每一位與會者的參與。因此工作人員們都很樂意協助與會者聯絡現場保全人員，或地方執法單位以提供護送服務，或任何能夠讓受到騷擾的與會者在會議期間感到安全的協助。</p>
     <p class="my-4">我們希望所有的與會者不論在論壇現場，或任何與本論壇相關的社交活動、社群平台或線上媒體中，都能夠遵守上述規則。</p>
 
+    <h2 class="my-4 font-semibold text-2xl">議程進出場須知</h2>
+	<p class="my-4"><b>每場議程結束後請盡速離場</b>：每場議程結束後，場地會進行換場作業，將引導場內觀眾全數離場，請記得攜帶所有隨身物品。</p>
+	<p class="my-4"><b>入場時間限制</b>：每場議程將於開場前 10 分鐘開放入場，可提前排隊，建議提前抵達以確保入場。</p>
+	<p class="my-4"><b>排隊引導</b>：排隊與入場動線將由現場工作人員引導，請依照指示配合，也請勿代排。</p>
+	<p class="my-4"><b>人數限制</b>：每場地皆有表定容納人數，額滿會由該場工作人員宣布，即停止入場，可改前往其他議程參與。</p>
+	<p class="my-4"><b>每排坐滿</b>：入座時請不要保留空位，盡可能每排都坐滿。</p>
+	<p class="my-4"><b>中途離場機制</b>：若議程開始後需中途暫離（如：使用洗手間、飲水機），入口處會備有場次小卡，持卡可於原場次重新入場。</p>
+
     <footer>
       <p class="my-4">This CoC is adapted from <%= link_to "http://confcodeofconduct.com/", "http://confcodeofconduct.com/", target: "_blank", class: 'underline text-red-500 hover:text-red-700' %> under a Creative Commons Attribution 3.0 Unported License.</p>
     </footer>
